[package]
name = "fsg"
version = "0.1.0"
authors = ["Renan Ferreira"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.28"
wasm-bindgen = "0.2.51"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Document',
  'Element',
  'ImageData',
  'HtmlElement',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'MouseEvent',
  'EventTarget',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'Window'
]